**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.8 BETA
---------------------
  - Fixed defect #1006 Wrong fanart file name if NFO <fanart> field filled in link  
  - Fixed defect #1187 Trailing '|' character in IMDB plots
  - Enhancement  #1188 Add support for Danish language tag in the filename
  - Fixed defect #1194 NFO fileinfo streamdetails are not overriding the MediaInfo scraped information
  - Fixed defect #1202 Standardised plot length across plugins
  - Fixed defect #1204 Video output in the YAMJ generated XML file is always 'UNKNOWN 60Hz'
  - Fixed defect #1205 Video Output does not use MediaInfo information
  - Fixed defect #1211 Audio channels always UNKNOWN

MovieJukebox 1.7
----------------
  - Enhancement   #358 Intuitive movie highlight when surfing up/down pages in the movies index (default skin)
  - Enhancement   #503 Simplify skins by figuring out the vod/vcd/playlist attributes in YAMJ itself
  - Enhancement   #743 Fanart for Set index pages
  - Fixed defect  #783 mjb.categories.displayList and Sets
  - Enhancement   #811 Property to disable multipart playlists
  - Enhancement   #983 Add file date to the basename.xml files
  - Fixed defect #1028 nbTvThumbnailsPerPage doesn't carry over to TV sets when using singleSeriesPage=true
  - Fixed defect #1050 YAMJ doesn't include myiHome server IP in *.playlist.jsp
  - Fixed defect #1067 No more fanart displayed with Allocine plugin
  - Fixed defect #1086 BluRay Disk folders with multiple .m2ts files making up the main movie are handled as if they're multiple parts
  - Fixed defect #1090 YAMJ not indexing a BluRay TV Series properly
  - Fixed defect #1094 IMDb Rating not detected
  - Enhancement  #1102 Sort the moviedb.org poster images by age (oldest first)
  - Fixed defect #1105 Black bar at the top of images if aspect ratio is wrong