@@ -6,12 +6,15 @@ MovieJukebox 1.8 BETA
 ---------------------
   - Fixed defect #1006 Wrong fanart file name if NFO <fanart> field filled in link  
   - Fixed defect #1187 Trailing '|' character in IMDB plots
+  - Fixed defect #1190 IMDb parser gets wrong title for movie with parentheses
   - Enhancement  #1188 Add support for Danish language tag in the filename
   - Fixed defect #1194 NFO fileinfo streamdetails are not overriding the MediaInfo scraped information
   - Fixed defect #1202 Standardised plot length across plugins
   - Fixed defect #1204 Video output in the YAMJ generated XML file is always 'UNKNOWN 60Hz'
   - Fixed defect #1205 Video Output does not use MediaInfo information
   - Fixed defect #1211 Audio channels always UNKNOWN
+  - Fixed defect #1221 Audio information defect in XML files 
+  
 
 MovieJukebox 1.7
 ----------------
